--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/debug": "^4.1.7",
+    "debug": "^4.3.4",
     "electron-squirrel-startup": "^1.0.0",
+    "python-wasm": "^0.25.1",
     "typescript": "^4.9.3"
   },
   "devDependencies": {
