--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "@types/debug": "^4.1.7",
     "debug": "^4.3.4",
     "electron-squirrel-startup": "^1.0.0",
-    "python-wasm": "^0.25.1",
-    "typescript": "^4.9.3"
+    "python-wasm": "^0.25.1"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.3",
@@ -36,6 +35,7 @@
     "html-webpack-plugin": "^5.5.0",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "ts-loader": "^9.4.1",
+    "typescript": "^4.9.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0"
   }
