--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "electron-forge-3",
-  "productName": "electron-forge-3",
-  "version": "1.0.0",
-  "description": "My Electron application description",
+  "name": "cowasm-desktop",
+  "productName": "CoWasmDesktop",
+  "version": "0.1.0",
+  "description": "CoWasm Electron Desktop App",
   "main": "dist/main/index.js",
   "scripts": {
     "build": "npx tsc && npx webpack",
@@ -15,17 +15,22 @@
     "tsc": "npx tsc --watch",
     "webpack": "npx webpack --watch"
   },
-  "keywords": [],
+  "keywords": ["python", "electronjs", "desktop"],
   "author": {
     "name": "William Stein",
     "email": "wstein@sagemath.com"
   },
-  "license": "MIT",
+  "license": "AGPLv3",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sagemathinc/cowasm-desktop.git"
+  },
+  "homepage": "https://github.com/sagemathinc/cowasm-desktop",
   "dependencies": {
     "@types/debug": "^4.1.7",
     "debug": "^4.3.4",
     "electron-squirrel-startup": "^1.0.0",
-    "python-wasm": "^0.25.2"
+    "python-wasm": "^0.25.3"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.3",
