--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cowasm-desktop",
-  "productName": "CoWasmDesktop",
+  "productName": "CoWasm Desktop",
   "version": "0.1.0",
   "description": "CoWasm Electron Desktop App",
   "main": "dist/main/index.js",
@@ -15,7 +15,16 @@
     "tsc": "npx tsc --watch",
     "webpack": "npx webpack --watch"
   },
-  "keywords": ["python", "electronjs", "desktop"],
+  "frontend": {
+    "config": {
+      "applicationName": "CoWasm Desktop"
+    }
+  },
+  "keywords": [
+    "python",
+    "electronjs",
+    "desktop"
+  ],
   "author": {
     "name": "William Stein",
     "email": "wstein@sagemath.com"
@@ -30,7 +39,9 @@
     "@types/debug": "^4.1.7",
     "debug": "^4.3.4",
     "electron-squirrel-startup": "^1.0.0",
-    "python-wasm": "^0.25.3"
+    "python-wasm": "^0.26.0",
+    "xterm": "^5.0.0",
+    "xterm-addon-web-links": "^0.7.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.3",
@@ -38,9 +49,11 @@
     "@electron-forge/maker-rpm": "^6.0.3",
     "@electron-forge/maker-squirrel": "^6.0.3",
     "@electron-forge/maker-zip": "^6.0.3",
+    "css-loader": "^6.7.2",
     "electron": "21.3.0",
     "html-webpack-plugin": "^5.5.0",
     "node-polyfill-webpack-plugin": "^2.0.1",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1",
     "typescript": "^4.9.3",
     "webpack": "^5.75.0",
